fix swagger code for validation.
